# STM32G4

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: startup_stm32g491xx.s  stm32_flash.ld  stm32g491xx.h  stm32g4xx.h  system_stm32g4xx.c  system_stm32g4xx.h
scripts/: run_lcov.sh
src/: main.cc
src/lib/chip/stm32g491/: stm32g491_chip.cc  stm32g491_chip.hh  stm32g491_hal.cc  stm32g491_mock.cc  stm32g491_mock.hh
src/lib/chip/stm32g491/test/: utest_stm32g491_hal.cc
src/lib/peripherals/gpio/: gpio.cc  gpio.hh
src/lib/peripherals/gpio/test/: utest_gpio.cc
